[project]
name = "microeconomics-calculators"
version = "0.1.0"
description = "Microeconomics calculation tools"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff>=0.4"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
